--- a/.gitignore
+++ b/.gitignore
@@ -33,4 +33,5 @@ Models/*
 !Assets/Modules/AlfaBravo.meta
 !Assets/Modules/AlfaBravo
 !Manual/img/Component/Alfa-Bravo.svg
+!Manual/img/Component/Alfa-Bravo-Inkscape.svg
 !Models/AlfaBravo.blend
